# pdf-to-markdown

./: .coverage  .flake8  .gitignore  README.md  convert_pdf.py  coverage.xml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
.hypothesis/examples/c2fc8c799284deb2/: 2d3cd32b2dd61321
.hypothesis/examples/dbdcc24633f3ee7f/: 13251c1a87fddf2a  1334999d6cf9e924  164353878a0eb066  2544555b8a5f286f  304a0d6460ab45e0  38bc98656bc7af20  3ecc428393e27e4e  49f70fbcd91dd50a  4e24a633d2de2a50  829aba77945cf16f  84d0336f2636d7d4  a6dbfcfea06b7414  af2028f72b0b239a  b32c873f0c06ad8a  b6c744ea1dd72c09  c0396219bf311a8c  c237bcd59299bc39  c55b10269d321a70  d6e8c547cc8bfdcc  d88e922264679aef  ef47ea44f0ea7c46  fa7b17804eb9a8ec
app/: __init__.py  formatters.py  main.py  markdown_generator.py  ocr_processor.py  pdf_processor.py  table_extractor.py  validators.py
app/formatters/: __init__.py  base_formatter.py  csv_formatter.py  html_formatter.py  yaml_formatter.py
app/validators/: __init__.py  norwegian_validator.py
tests/: __init__.py  conftest.py  test_formatters.py  test_main.py  test_markdown_generator.py  test_norwegian_invoice.py  test_norwegian_validation.py  test_ocr_processing.py  test_pdf_processor.py  test_table_extraction.py
tests/integration/: __init__.py  test_pdf_to_markdown.py
tests/performance/: __init__.py  test_performance.py
tests/property/: __init__.py  test_properties.py
